Package_Tools/include-C/suitesparse/fertig/klu.h


typedef struct
{
    double symmetry ;   
    double est_flops ;  
    double lnz, unz ;   
    double *Lnz ;       
    int32_t
        n,              
        nz,             
        *P,             
        *Q,             
        *R,             
        nzoff,          
        nblocks,        
        maxblock,       
        ordering,       
        do_btf ;        
    int32_t structural_rank ;   
} klu_symbolic ;
typedef struct          
{
    double symmetry, est_flops, lnz, unz ;
    double *Lnz ;
    int64_t n, nz, *P, *Q, *R, nzoff, nblocks, maxblock, ordering,
        do_btf, structural_rank ;
} klu_l_symbolic ;
typedef struct
{
    int32_t n ;             
    int32_t nblocks ;       
    int32_t lnz ;           
    int32_t unz ;           
    int32_t max_lnz_block ; 
    int32_t max_unz_block ; 
    int32_t *Pnum ;         
    int32_t *Pinv ;         
    int32_t *Lip ;          
    int32_t *Uip ;          
    int32_t *Llen ;         
    int32_t *Ulen ;         
    void **LUbx ;       
    size_t *LUsize ;    
    void *Udiag ;       
    double *Rs ;        
    size_t worksize ;   
    void *Work ;        
    void *Xwork ;       
    int32_t *Iwork ;        
    int32_t *Offp ;         
    int32_t *Offi ;         
    void *Offx ;        
    int32_t nzoff ;
} klu_numeric ;
typedef struct          
{
    int64_t n, nblocks, lnz, unz, max_lnz_block, max_unz_block, *Pnum,
        *Pinv, *Lip, *Uip, *Llen, *Ulen ;
    void **LUbx ;
    size_t *LUsize ;
    void *Udiag ;
    double *Rs ;
    size_t worksize ;
    void *Work, *Xwork ;
    int64_t *Iwork ;
    int64_t *Offp, *Offi ;
    void *Offx ;
    int64_t nzoff ;
} klu_l_numeric ;
#define KLU_OK 0
#define KLU_SINGULAR (1)            
#define KLU_OUT_OF_MEMORY (-2)
#define KLU_INVALID (-3)
#define KLU_TOO_LARGE (-4)          
typedef struct klu_common_struct
{
    double tol ;            
    double memgrow ;        
    double initmem_amd ;    
    double initmem ;        
    double maxwork ;        
    int btf ;               
    int ordering ;          
    int scale ;             
    int32_t (*user_order) (int32_t, int32_t *, int32_t *, int32_t *,
        struct klu_common_struct *) ;
    void *user_data ;
    int halt_if_singular ;      
    int status ;                
    int nrealloc ;              
    int32_t structural_rank ;       
    int32_t numerical_rank ;        
    int32_t singular_col ;          
    int32_t noffdiag ;      
    double flops ;      
    double rcond ;      
    double condest ;    
    double rgrowth ;    
    double work ;       
    size_t memusage ;   
    size_t mempeak ;    
} klu_common ;
typedef struct klu_l_common_struct 
{
    double tol, memgrow, initmem_amd, initmem, maxwork ;
    int btf, ordering, scale ;
    int64_t (*user_order) (int64_t, int64_t *, int64_t *, int64_t *,
        struct klu_l_common_struct *) ;
    void *user_data ;
    int halt_if_singular, status, nrealloc ;
    int64_t structural_rank, numerical_rank, singular_col, noffdiag ;
    double flops, rcond, condest, rgrowth, work ;
    size_t memusage, mempeak ;
} klu_l_common ;
int klu_defaults
(
    klu_common *Common
) ;
int klu_l_defaults (klu_l_common *Common) ;
klu_symbolic *klu_analyze
(
    int32_t n,              
    int32_t Ap [ ],         
    int32_t Ai [ ],         
    klu_common *Common
) ;
klu_l_symbolic *klu_l_analyze (int64_t, int64_t *, int64_t *,
    klu_l_common *Common) ;
klu_symbolic *klu_analyze_given
(
    int32_t n,              
    int32_t Ap [ ],         
    int32_t Ai [ ],         
    int32_t P [ ],          
    int32_t Q [ ],          
    klu_common *Common
) ;
klu_l_symbolic *klu_l_analyze_given (int64_t, int64_t *, int64_t *, int64_t *,
    int64_t *, klu_l_common *) ;
klu_numeric *klu_factor 
(
    int32_t Ap [ ],         
    int32_t Ai [ ],         
    double Ax [ ],      
    klu_symbolic *Symbolic,
    klu_common *Common
) ;
klu_numeric *klu_z_factor      
(
     int32_t Ap [ ],        
     int32_t Ai [ ],        
     double Ax [ ],     
     klu_symbolic *Symbolic,
     klu_common *Common
) ;
klu_l_numeric *klu_l_factor (int64_t *, int64_t *, double *,
    klu_l_symbolic *, klu_l_common *) ;
klu_l_numeric *klu_zl_factor (int64_t *, int64_t *, double *,
    klu_l_symbolic *, klu_l_common *) ;
int klu_solve
(
    klu_symbolic *Symbolic,
    klu_numeric *Numeric,
    int32_t ldim,               
    int32_t nrhs,               
    double B [ ],           
    klu_common *Common
) ;
int klu_z_solve
(
     klu_symbolic *Symbolic,
     klu_numeric *Numeric,
     int32_t ldim,               
     int32_t nrhs,               
     double B [ ],          
     klu_common *Common
) ;
int klu_l_solve (klu_l_symbolic *, klu_l_numeric *,
    int64_t, int64_t, double *, klu_l_common *) ;
int klu_zl_solve (klu_l_symbolic *, klu_l_numeric *,
    int64_t, int64_t, double *, klu_l_common *) ;
int klu_tsolve
(
    klu_symbolic *Symbolic,
    klu_numeric *Numeric,
    int32_t ldim,               
    int32_t nrhs,               
    double B [ ],           
    klu_common *Common
) ;
int klu_z_tsolve
(
    klu_symbolic *Symbolic,
    klu_numeric *Numeric,
    int32_t ldim,               
    int32_t nrhs,               
    double B [ ],           
    int conj_solve,         
    klu_common *Common
) ;
int klu_l_tsolve (klu_l_symbolic *, klu_l_numeric *,
    int64_t, int64_t, double *, klu_l_common *) ;
int klu_zl_tsolve (klu_l_symbolic *, klu_l_numeric *,
    int64_t, int64_t, double *, int, klu_l_common * ) ;
int klu_refactor            
(
    int32_t Ap [ ],         
    int32_t Ai [ ],         
    double Ax [ ],      
    klu_symbolic *Symbolic,
    klu_numeric *Numeric,
    klu_common *Common
) ;
int klu_z_refactor          
(
     int32_t Ap [ ],        
     int32_t Ai [ ],        
     double Ax [ ],     
     klu_symbolic *Symbolic,
     klu_numeric *Numeric,
     klu_common *Common
) ;
int klu_l_refactor (int64_t *, int64_t *,
    double *, klu_l_symbolic *, klu_l_numeric *, klu_l_common *) ;
int klu_zl_refactor (int64_t *, int64_t *,
    double *, klu_l_symbolic *, klu_l_numeric *, klu_l_common *) ;
int klu_free_symbolic
(
    klu_symbolic **Symbolic,
    klu_common *Common
) ;
int klu_l_free_symbolic (klu_l_symbolic **, klu_l_common *) ;
int klu_free_numeric
(
    klu_numeric **Numeric,
    klu_common *Common
) ;
int klu_z_free_numeric
(
     klu_numeric **Numeric,
     klu_common *Common
) ;
int klu_l_free_numeric (klu_l_numeric **, klu_l_common *) ;
int klu_zl_free_numeric (klu_l_numeric **, klu_l_common *) ;
int klu_sort
(
    klu_symbolic *Symbolic,
    klu_numeric *Numeric,
    klu_common *Common
) ;
int klu_z_sort
(
    klu_symbolic *Symbolic,
    klu_numeric *Numeric,
    klu_common *Common
) ;
int klu_l_sort  (klu_l_symbolic *, klu_l_numeric *, klu_l_common *) ;
int klu_zl_sort (klu_l_symbolic *, klu_l_numeric *, klu_l_common *) ;
int klu_flops
(
    klu_symbolic *Symbolic,
    klu_numeric *Numeric,
    klu_common *Common
) ;
int klu_z_flops
(
    klu_symbolic *Symbolic,
    klu_numeric *Numeric,
    klu_common *Common
) ;
int klu_l_flops  (klu_l_symbolic *, klu_l_numeric *, klu_l_common *) ;
int klu_zl_flops (klu_l_symbolic *, klu_l_numeric *, klu_l_common *) ;
int klu_rgrowth
(
    int32_t Ap [ ],
    int32_t Ai [ ],
    double Ax [ ],
    klu_symbolic *Symbolic,
    klu_numeric *Numeric,
    klu_common *Common          
) ;
int klu_z_rgrowth
(
    int32_t Ap [ ],
    int32_t Ai [ ],
    double Ax [ ],
    klu_symbolic *Symbolic,
    klu_numeric *Numeric,
    klu_common *Common          
) ;
int klu_l_rgrowth (int64_t *, int64_t *,
    double *, klu_l_symbolic *, klu_l_numeric *, klu_l_common *) ;
int klu_zl_rgrowth (int64_t *, int64_t *,
    double *, klu_l_symbolic *, klu_l_numeric *, klu_l_common *) ;
int klu_condest
(
    int32_t Ap [ ],         
    double Ax [ ],          
    klu_symbolic *Symbolic, 
    klu_numeric *Numeric,   
    klu_common *Common      
) ;
int klu_z_condest
(
    int32_t Ap [ ],
    double Ax [ ],          
    klu_symbolic *Symbolic,
    klu_numeric *Numeric,
    klu_common *Common      
) ;
int klu_l_condest (int64_t *, double *, klu_l_symbolic *,
    klu_l_numeric *, klu_l_common *) ;
int klu_zl_condest (int64_t *, double *, klu_l_symbolic *,
    klu_l_numeric *, klu_l_common *) ;
int klu_rcond
(
    klu_symbolic *Symbolic,         
    klu_numeric *Numeric,           
    klu_common *Common              
) ;
int klu_z_rcond
(
    klu_symbolic *Symbolic,         
    klu_numeric *Numeric,           
    klu_common *Common              
) ;
int klu_l_rcond  (klu_l_symbolic *, klu_l_numeric *, klu_l_common *) ;
int klu_zl_rcond (klu_l_symbolic *, klu_l_numeric *, klu_l_common *) ;
int klu_scale           
(
    int scale,          
    int32_t n,
    int32_t Ap [ ],         
    int32_t Ai [ ],         
    double Ax [ ],
    double Rs [ ],
    int32_t W [ ],          
    klu_common *Common
) ;
int klu_z_scale         
(
    int scale,          
    int32_t n,
    int32_t Ap [ ],         
    int32_t Ai [ ],         
    double Ax [ ],
    double Rs [ ],
    int32_t W [ ],          
    klu_common *Common
) ;
int klu_l_scale (int, int64_t, int64_t *, int64_t *, double *,
    double *, int64_t *, klu_l_common *) ;
int klu_zl_scale (int, int64_t, int64_t *, int64_t *, double *,
    double *, int64_t *, klu_l_common *) ;